# OpenGL

./: .gitmodules  CMakeLists.txt  run.sh
cmake/: imgui.cmake
res/shaders/: Basic.fs  Basic.vs
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestBlending.cpp  TestBlending.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
